# bookmark-keeper

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
bsafe/: bin.py  utils.py
bsafe/scripts/: main.py
configs/: default.json
